--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
   <body>
     <header class="page-header">
       <!-- Add your logo here -->
-      <img src="http://via.placeholder.com/200x70" alt="logo" class="page-header__item">
+      <div class="page-header__item">
+        <img src="img/Caleb_Schappa_Logo2.png" alt="Caleb Schappa Web Dev Logo" class="page-header__logo">
+      </div>
       <nav class="page-header__item">
         <ul role="menubar" class="navigation-list">
           <li role="presentation">
