--- a/about.html
+++ b/about.html
@@ -182,6 +182,8 @@
         </g>
     </svg>
 
+    <p><a target="_blank" href="https://www.freepik.com/free-vector/miami-city-lettering_6203328.htm">Design vector created by freepik - www.freepik.com and modified by me</a></p>
+
     </div>
     <footer class="page-footer">
       <p>Find me on</p>
