--- a/work.html
+++ b/work.html
@@ -14,7 +14,7 @@
   <body>
     <header class="page-header">
       <div class="page-header__item">
-        <img src="img/Caleb_Schappa_Logo2.png" alt="Caleb Schappa Web Dev Logo" class="page-header__logo">
+        <img src="img/Caleb_Schappa_Logo.png" alt="Caleb Schappa Web Dev Logo" class="page-header__logo">
       </div>
       <nav class="page-header__item">
         <ul role="menubar" class="navigation-list">
