code clean up for w3c linter

--- a/contact.html
+++ b/contact.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <meta charset="utf-8">
     <title>Contact Caleb Schappa</title>
@@ -37,9 +37,9 @@
 
       <a href="mailto:office@careerfoundry.com">Contact me</a>
 
-      <form action="" method="post" id="contact-form">
+      <form action="#" method="post" id="contact-form">
         <label class="standard-label" for="contact-email">E-mail: </label>
-        <input type="email" id="contact-email"required>
+        <input type="email" id="contact-email" required>
 
         <label class="standard-label" for="contact-telephone">Telephone: </label>
         <input type="tel" pattern="\d{3}[\-]\d{3}[\-]\d{4}" id="contact-telephone">
@@ -58,7 +58,7 @@
           <br>
           Tel <a href="Tel:+493048492016">+49 30 4849 2016</a><br>
           Skype <a href="Skype:hello.careerfoundry">hello.careerfoundry</a><br>
-          <a href="<a href="mailto:office@careerfoundry.com?subject=feedback">office@careerfoundry.com</a>
+          <a href="mailto:office@careerfoundry.com?subject=feedback">office@careerfoundry.com</a>
       </div>
     </section>  
     <footer class="page-footer">
