added links to the social media icons

--- a/work.html
+++ b/work.html
@@ -86,9 +86,8 @@
     <footer class="page-footer">
       <p>Find me on</p>
       <div class="social-media">
-        <img src="img/github_icon.svg" alt="Git Hub">
-        <img src="img/twitter_icon.svg" alt="Twitter">
-        <img src="img/linkedin_icon.svg" alt="LinkedIn">
+        <a href="https://github.com/cschappa" target="_blank"><img src="img/github_icon.svg" alt="Git Hub"></a>
+        <a href="https://www.linkedin.com/in/calebschappa/" target="_blank"><img src="img/linkedin_icon.svg" alt="LinkedIn"></a>
       </div>
     </footer>
 
