--- a/contact.html
+++ b/contact.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
-    <link rel="stylesheet" type="text/css" href="css/style.production.css">
+    <link rel="stylesheet" type="text/css" href="css/styles.css">
   </head>
   <body>
     <header class="page-header">
@@ -32,34 +32,25 @@
         </ul>
       </nav>
     </header>
-    <section class="main-body">
+    <section class="contact">
       <h1>Contact</h1>
 
-      <a href="mailto:office@careerfoundry.com">Contact me</a>
-
       <form action="#" method="post" id="contact-form">
-        <label class="standard-label" for="contact-email">E-mail: </label>
+        <label class="standard-label" for="contact-name">Name:</label>
+        <input type="text" id="contact-name" required>
+
+        <label class="standard-label" for="contact-email">E-mail:</label>
         <input type="email" id="contact-email" required>
 
-        <label class="standard-label" for="contact-telephone">Telephone: </label>
+        <label class="standard-label" for="contact-telephone">Telephone:</label>
         <input type="tel" pattern="\d{3}[\-]\d{3}[\-]\d{4}" id="contact-telephone">
 
         <label class="standard-label" for="contact-message">Message: </label>
-        <textarea maxlength="240" required id="contact-message"></textarea>
+        <textarea maxlength="240" required id="contact-message" placeholder="How can I help?"></textarea>
 
         <input type="submit" value="Send message">
       </form>
 
-      <div>
-          CareerFoundry GmbH<br>
-          Köpenicker Str. 126 <br>
-         10179 Berlin<br>
-          Deutschland<br>
-          <br>
-          Tel <a href="Tel:+493048492016">+49 30 4849 2016</a><br>
-          Skype <a href="Skype:hello.careerfoundry">hello.careerfoundry</a><br>
-          <a href="mailto:office@careerfoundry.com?subject=feedback">office@careerfoundry.com</a>
-      </div>
     </section>  
     <footer class="page-footer">
       <p>Find me on</p>
