open links in new tab

--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
       <img src="img/Caleb_Schappa.jpg" class="profile_portrait" alt="Caleb Schappa Portrait">
       <h1>Hello World!</h1>
       <p>My name is Caleb Schappa!</p>
-      <p>I am a <span>web</span> developer from <a href="https://www.miamiandbeaches.com/">Miami.</a></p>
-      <p><a href="work.html">Check out some of my code</a></p>
+      <p>I am a <span>web</span> developer from <a href="https://www.miamiandbeaches.com/" target="_blank">Miami.</a></p>
+      <p><a href="work.html" target="_blank">Check out some of my code</a></p>
 
     </div>
     <footer class="page-footer">
